--- a/grsyncx/Info.plist
+++ b/grsyncx/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1</string>
+	<string>$(GRSYNCX_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>10</string>
+	<string>$(GRSYNCX_BUILD)</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
