--- a/grsyncx/Info.plist
+++ b/grsyncx/Info.plist
@@ -20,6 +20,8 @@
 	<string>$(GRSYNCX_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(GRSYNCX_BUILD)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
